# free-game-sfx

./: README.md
8bit/: 8bit-charging3.flac  8bit-darthit.txt  8bit-fanfare01.txt  8bit-laser1.txt  8bit-warp1.txt
sound/clanbomber/wavs/: Makefile.am
unsorted/: 8bit-bump.txt  8bit-dartfire.txt  8bit-explode.txt  8bit-explosion4.txt  8bit-fanfare.flac  8bit-hit.txt  8bit-kick.txt  8bit-laser3.txt  8bit-rocketlaunch.txt  animal-bird1.flac  animal-bird1.txt  animal-bird2.flac  animal-bird3.flac  animal-cat01.flac  animal-cat01.txt  animal-cat02.flac  animal-cat02.txt  animal-chicken01.flac  animal-chicken02.txt  animal-chicken03-cleaned.flac  animal-chicken03.txt  animal-chicken04.flac  animal-chicken05-raw.flac  animal-chicken05.flac  animal-chicken05.txt  animal-cow1.txt  animal-dog01.txt  animal-dog02.txt  animal-dog05-snarl.txt  animal-dog06-grunt.txt  animal-dog07-excited.flac  animal-dog07-excited.txt  animal-dog08.flac  animal-dog10.txt  (+756 more)
unsorted-ambient/: Bar.txt  dungeon_ambience.txt  fireplace.flac  ghosts1.flac  ghosts1.txt  ghosts2.txt  ghosts3.flac  ghosts3.txt  ghosts4.flac  ghosts4.txt  ghosts5.flac  ghosts5.txt  ghosts6.flac  ghosts6.txt  ghosts7.txt  ghosts8.txt  lava.txt  sci-fi-vent.txt  stream2.flac  waterfall.flac  waterfall.txt  waterfall2-small.flac  waterfall2-small.txt
unsorted-voice-acting/: female-voice-goodbye.txt  female-voice-have-a-nice-day.txt  female-voice-hello1.flac  female-voice-hello1.txt  female-voice-how-can-i-help-you.txt  female-voice-what-can-i-do-for-you-today.flac  female-voice-what-can-i-do-for-you-today.txt  rts-acks1.txt
(+1717 files in other folders)
